--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="nav3">
             <a href="#">Log in/Register</a>
             <div class="login-bar"></div>
-            <a href="#">Book Now</a>
+            <a href="#">Book Now!</a>
         </div>
         <div class="nav-small-screen">
             <i class="fa fa-bars smallbar " aria-hidden="true" onclick="opentoggle()"></i>  
